    ADDED: action: Open With Menu - shortcut: CTRL + Enter
    ADDED: action: Open With... - shortcut: CTRL + O

    FIXED:  [ 293370 ]  After a file deletion old file name is still shown
                        in the status bar 


master
==========================

    ADDED: action: Go to Other Panel's Directory - shortcut: CTRL+=

    CHANGED: user action manager starts with the "Basic Properties" tab active
    CHANGED: detailed view: "Automatically Resize Columns" setting is remembered

    FIXED: [ 274483 ] crash when selecting items from popup-menu
    FIXED: [ 285778 ] View or edit files doesn't work
    FIXED: viewer tries to load obsolete libkhexedit2 part as hex viewer -
           use okteta part instead
    FIXED: crash when trying to view files with embedded KOrganizer part
           (avoids KOrganizer bug 205713)
    FIXED: "apply settings to other tab" action doesn't apply icon size
    FIXED: [ 198996 ] crash when closing viewer
    FIXED: [ 294501 ] toolbar "equal" has no shortcut
    FIXED: [ 108892 ] "Combine Files" overwrites existing target file without confirmation
    FIXED: Queue manager closed when any of the queues finished
    FIXED: [ 300922 ] crash when pause sftp transfer via queue on quit
    FIXED: [ 271265 ] krusader should search for kdesu executable in /usr/lib{64,}/kde4/libexec/
           - thanks to Anssi Hannula / Ahmad Samir
    FIXED: [ 290304 ] Panel option "always sort dirs by name" doesn't work
    FIXED: [ 297926 ] state of the menu item 'Show hidden files' and the current setting is different
    FIXED: [ 234296 ] crash when closing disk usage view
    FIXED: [ 296718 ] execution of files that have spaces in their path doesn't work anymore
    FIXED: [ 294618 ] using "open with" on video files
           causes their thumbnails to be created, even when not needed
    FIXED: root mode action doesn't work if a panel url contains spaces
    FIXED: relative url completion in address-bar only works in home dir